sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:11: error: not found: value nb_echnage1
    if(nb_echnage1!=0){
       ^AlgCocktailSort3:24: error: not found: value nb_echnage2
    if(nb_echnage2!=0){
       ^